# web-assets-extractor

./: .gitignore  README.md  pyproject.toml  web-assets-extractor.spec
scripts/: build.sh
tests/: test_analyzer.py  test_downloader.py  test_muxer.py
web_assets_extractor/: __init__.py  main.py
web_assets_extractor/gui/: __init__.py  main_window.py  tabs.py  workers.py
web_assets_extractor/models/: __init__.py  analysis.py
web_assets_extractor/services/: __init__.py  analyzer.py  downloader.py  exporter.py  muxer.py  preview.py  youtube.py
web_assets_extractor/utils/: __init__.py  colors.py  css.py  files.py  urls.py
